--- a/src/pages/SandboxPage/components/TransactionTree/TransactionTree.module.css
+++ b/src/pages/SandboxPage/components/TransactionTree/TransactionTree.module.css
@@ -266,3 +266,15 @@
   flex-direction: column;
   gap: 2px;
 }
+
+.nodeCircle {
+  cursor: pointer;
+}
+
+.nodeCircleDefault {
+  cursor: default;
+}
+
+.nodeText {
+  pointer-events: none;
+}
