--- a/src/pages/PlaygroundPage/PlaygroundPage.module.css
+++ b/src/pages/PlaygroundPage/PlaygroundPage.module.css
@@ -20,6 +20,32 @@
   display: flex;
   flex-grow: 1;
   justify-content: flex-end;
+  align-items: center;
+  gap: var(--spacing-md);
+}
+
+.languageSwitcherContainer {
+  display: flex;
+  gap: var(--spacing-md);
+  margin-right: auto;
+}
+
+.languageSwitcher {
+  display: flex;
+  gap: var(--spacing-xs);
+  margin-right: auto;
+}
+
+.steppingSwitcher {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-xs);
+}
+
+.steppingLabel {
+  color: var(--color-text-secondary);
+  font-size: var(--font-size-xsm);
+  margin-right: var(--spacing-xs);
 }
 
 .txStatusContainer {
@@ -33,7 +59,6 @@
   display: flex;
   justify-self: flex-end;
   gap: var(--spacing-md);
-  margin-left: auto;
   margin-right: var(--spacing-lg);
 }
 
@@ -79,6 +104,29 @@
   background-color: var(--color-background-primary);
   display: flex;
   flex-direction: column;
+}
+
+.fullEditorWrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.funcEditorWrapper {
+  display: grid;
+  grid-template-columns: 1fr 40%;
+  grid-template-rows: 1fr;
+  gap: var(--spacing-xs);
+  align-items: stretch;
+  height: 100%;
+}
+
+.asmViewerWrapper {
+  height: 100%;
+  border-left: 1px solid var(--color-divider);
+}
+
+.errorsContainer {
+  margin-top: var(--spacing-xs);
 }
 
 .executeButtonContainer {
