feat: show raw in message data in details (#134)

--- a/src/pages/SandboxPage/components/CodeBlock/CodeBlock.module.css
+++ b/src/pages/SandboxPage/components/CodeBlock/CodeBlock.module.css
@@ -92,6 +92,13 @@
   overflow-y: auto;
 }
 
+.contentSmallHex {
+  color: var(--color-text-secondary);
+  word-break: break-all;
+  max-height: 50px;
+  overflow-y: auto;
+}
+
 .inlineContainer {
   display: inline-flex;
   align-items: center;
