--- a/src/pages/SandboxPage/components/ContractChip/ContractChip.module.css
+++ b/src/pages/SandboxPage/components/ContractChip/ContractChip.module.css
@@ -6,7 +6,9 @@
   position: relative;
   padding: var(--spacing-xs) var(--spacing-xs) var(--spacing-xs) var(--spacing-xs);
   border-radius: var(--border-radius-sm);
-  transition: background-color var(--transition-duration-fast) ease;
+  transition:
+    background-color var(--transition-duration-fast) ease-out,
+    padding-right var(--transition-duration-fast) ease;
   border: none;
   background: transparent;
   color: inherit;
@@ -16,6 +18,7 @@
 
 .contractChip:hover {
   background-color: var(--color-background-secondary);
+  padding-right: 1.7rem;
 }
 
 .contractChip:hover .contractChipCopyButton {
@@ -29,9 +32,6 @@
 
 .contractChip.clickable:hover {
   background-color: var(--color-background-secondary);
-}
-
-.contractChip.clickable:active {
 }
 
 .contractLetter {
@@ -51,20 +51,19 @@
 .contractName {
   font-weight: var(--font-weight-medium);
   color: var(--table-td-text-color);
-
   margin-top: -3px; /* compensate */
 }
 
 .contractAddress {
   color: var(--color-text-secondary);
   font-size: var(--font-size-xs);
-  font-family: var(--font-family-mono), monospace;
+  font-family: var(--vscode-editor-font-family), monospace;
 }
 
 .singleContractAddress {
   color: var(--color-text-secondary);
   font-size: var(--font-size-sm);
-  font-family: var(--font-family-mono), monospace;
+  font-family: var(--vscode-editor-font-family), monospace;
 }
 
 .contractChipCopyButton {
@@ -94,5 +93,5 @@
   width: 14px;
   height: 14px;
   display: block;
-  stroke: currentColor;
+  stroke: currentcolor;
 }
