--- a/src/pages/InstructionsPage/components/SearchColumnsSelector/SearchColumnsSelector.module.css
+++ b/src/pages/InstructionsPage/components/SearchColumnsSelector/SearchColumnsSelector.module.css
@@ -71,16 +71,19 @@
   background-color: var(--color-secondary);
 }
 
-@media (max-width: 768px) {
+@media (width <= 768px) {
   .container {
     width: 100%;
   }
+
   .segmented {
     width: 100%;
   }
+
   .option {
     width: 100%;
   }
+
   .button {
     width: 100%;
   }
