--- a/src/pages/SandboxPage/components/DaemonSettings/DaemonSettings.module.css
+++ b/src/pages/SandboxPage/components/DaemonSettings/DaemonSettings.module.css
@@ -41,7 +41,7 @@
 
 .input:focus {
   border-color: var(--color-primary);
-  box-shadow: 0 0 0 3px rgba(var(--color-primary-rgb), 0.2);
+  box-shadow: 0 0 0 3px rgb(var(--color-primary-rgb), 0.2);
 }
 
 .actions {
