--- a/src/pages/TracePage/TracePage.module.css
+++ b/src/pages/TracePage/TracePage.module.css
@@ -8,11 +8,8 @@
 
 .loadingOverlay {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(var(--color-background-primary-rgb), 0.7);
+  inset: 0;
+  background-color: rgb(var(--color-background-primary-rgb), 0.7);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -53,9 +50,7 @@
 .mainContent {
   grid-area: main;
   display: grid;
-  grid-template-columns: 1fr 400px;
-  grid-template-rows: 1fr;
-  grid-template-areas: "editor sidebar";
+  grid-template: "editor sidebar" 1fr / 1fr 400px;
   width: calc(100% - var(--spacing-sm) * 2);
   min-height: 0;
   overflow: hidden;
@@ -198,7 +193,6 @@
   -webkit-text-fill-color: transparent;
   background: linear-gradient(89deg, #2b82eb, #1cc8ff);
   background-clip: text;
-  -webkit-background-clip: text;
   font-feature-settings:
     "clig" off,
     "liga" off;
@@ -318,7 +312,7 @@
 .featureCard:hover {
   text-decoration: none;
 
-  box-shadow: 0 0 0 3px rgba(var(--color-primary-rgb), 0.2);
+  box-shadow: 0 0 0 3px rgb(var(--color-primary-rgb), 0.2);
   border-color: var(--color-primary);
 }
 
@@ -481,7 +475,7 @@ footer {
   color: var(--color-text-primary);
 }
 
-@media (max-width: 768px) {
+@media (width <= 768px) {
   .appContainer {
     position: relative;
   }
@@ -493,17 +487,14 @@ footer {
   .historyItem > span[class*="status"] {
     display: none;
   }
+
   .historyItemBadges {
     display: none;
   }
 
   .mainContent {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1.5fr;
-    grid-template-areas:
-      "editor"
-      "sidebar";
+    grid-template: "editor" 1fr "sidebar" 1.5fr / 1fr;
     width: calc(100% - var(--spacing-xs) * 2);
     min-height: 0;
     padding: var(--spacing-xs);
@@ -704,10 +695,7 @@ footer {
 
 .stackItemOverlay {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   background: var(--color-background-primary);
   border-radius: var(--border-radius-lg);
   display: flex;
