--- a/spec/src/starlight.custom.css
+++ b/spec/src/starlight.custom.css
@@ -8,8 +8,8 @@
   --sl-color-accent-low: #00234c;
   --sl-color-accent: #0067c9;
   --sl-color-accent-high: #a4ccff;
-  --sl-color-real-white: #ffffff;
-  --sl-color-white: #ffffff;
+  --sl-color-real-white: #fff;
+  --sl-color-white: #fff;
   --sl-color-gray-1: #eceef2;
   --sl-color-gray-2: #c0c2c7;
   --sl-color-gray-3: #888b96;
@@ -34,7 +34,7 @@
   --sl-color-gray-5: #c0c2c7;
   --sl-color-gray-6: #eceef2;
   --sl-color-gray-7: #f5f6f8;
-  --sl-color-black: #ffffff;
+  --sl-color-black: #fff;
   --tracepage-logo-inner-gradient-start: #0f3ec9;
 }
 
@@ -132,7 +132,7 @@ header.header .site-title {
   font-weight: 400;
 }
 
-header.header .site-title span:before {
+header.header .site-title span::before {
   content: "TxTracer";
   font-size: var(--sl-text-lg) !important;
   color: var(--sl-color-real-white);
