--- a/src/features/themeSwitcher/ui/ThemeToggleButton.module.css
+++ b/src/features/themeSwitcher/ui/ThemeToggleButton.module.css
@@ -14,7 +14,7 @@
   margin-left: var(--spacing-sm);
 }
 
-@media (max-width: 768px) {
+@media (width <= 768px) {
   .toggleButtonText {
     display: none;
   }
