--- a/src/pages/InstructionsPage/InstructionsPage.module.css
+++ b/src/pages/InstructionsPage/InstructionsPage.module.css
@@ -127,13 +127,13 @@
   border: 0;
 }
 
-@media (max-width: 1100px) {
+@media (width <= 1100px) {
   .toolbar {
     flex-direction: column;
   }
 }
 
-@media (max-width: 768px) {
+@media (width <= 768px) {
   .appContainer {
     position: relative;
   }
@@ -191,7 +191,7 @@
   flex-wrap: wrap;
 }
 
-@media (max-width: 768px) {
+@media (width <= 768px) {
   .subCategoryAndDocsContainer {
     flex-direction: column;
     align-items: flex-start;
