--- a/src/pages/InstructionsPage/components/ContinuationsDocsBanner/ContinuationsDocsBanner.module.css
+++ b/src/pages/InstructionsPage/components/ContinuationsDocsBanner/ContinuationsDocsBanner.module.css
@@ -31,7 +31,7 @@
   text-decoration: underline;
 }
 
-@media (max-width: 1200px) {
+@media (width <= 1200px) {
   .compactBanner {
     padding-top: 0;
     padding-bottom: var(--spacing-sm);
