--- a/src/pages/InstructionsPage/components/ReferenceBubble/ReferenceBubble.module.css
+++ b/src/pages/InstructionsPage/components/ReferenceBubble/ReferenceBubble.module.css
@@ -12,7 +12,7 @@
   margin: 0 1px;
   cursor: default;
   position: relative;
-  color: #333333;
+  color: #333;
   line-height: 1.2;
   font-weight: 500;
   vertical-align: middle;
@@ -45,7 +45,7 @@
   min-width: 250px;
   max-width: 400px;
   z-index: 1050;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 4px 12px rgb(0 0 0 / 25%);
   font-size: var(--font-size-sm, 13px);
   text-align: left;
   white-space: normal;
@@ -71,5 +71,5 @@
 }
 
 .popoverSection strong {
-  color: var(--color-text, #bbbbbb);
+  color: var(--color-text, #bbb);
 }
