--- a/src/pages/SandboxPage/components/TransactionTraceViewer/TransactionTraceViewer.module.css
+++ b/src/pages/SandboxPage/components/TransactionTraceViewer/TransactionTraceViewer.module.css
@@ -1,9 +1,6 @@
 .container {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   background-color: var(--color-background-primary);
   z-index: 1000;
   display: flex;
@@ -103,7 +100,7 @@
   font-weight: var(--font-weight-semibold);
 }
 
-@media (max-width: 1024px) {
+@media (width <= 1024px) {
   .inlineMainContent {
     flex-direction: column;
     max-height: none;
