--- a/src/shared/ui/ButtonLoader/ButtonLoader.module.css
+++ b/src/shared/ui/ButtonLoader/ButtonLoader.module.css
@@ -4,8 +4,8 @@
 }
 
 .loader {
-  border: 2px solid rgba(255, 255, 255, 0.4);
-  border-top: 2px solid #ffffff;
+  border: 2px solid rgb(255 255 255 / 40%);
+  border-top: 2px solid #fff;
   border-radius: 50%;
   width: 12px;
   height: 12px;
@@ -16,6 +16,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
