--- a/src/shared/ui/Modal/Modal.module.css
+++ b/src/shared/ui/Modal/Modal.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(var(--color-black-rgb), 0.4);
+  background-color: rgb(var(--color-black-rgb), 0.4);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -27,6 +27,7 @@
     opacity: 0;
     transform: translateY(10px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
