--- a/src/shared/ui/TraceSidePanel/TraceSidePanel.module.css
+++ b/src/shared/ui/TraceSidePanel/TraceSidePanel.module.css
@@ -118,7 +118,7 @@
   min-height: 150px;
 }
 
-@media (max-width: 768px) {
+@media (width <= 768px) {
   .sidePanel {
     width: 100%;
     height: 100%;
