feat(instructions): add anchors (#148)

--- a/src/shared/ui/Button/Button.module.css
+++ b/src/shared/ui/Button/Button.module.css
@@ -13,6 +13,8 @@
   align-items: center;
   justify-content: center;
   user-select: none;
+  background-color: var(--color-background-secondary);
+  color: var(--color-text-secondary);
 }
 
 .btn:disabled {
