--- a/src/pages/InstructionsPage/components/InstructionTable/InstructionTable.module.css
+++ b/src/pages/InstructionsPage/components/InstructionTable/InstructionTable.module.css
@@ -55,6 +55,10 @@
   background-color: var(--color-background-secondary);
 }
 
+.divTr.tableRow:hover :global(.anchorButton) {
+  opacity: 0.65;
+}
+
 .divTr.tableRow:last-child:hover .divTd:first-child {
   border-radius: 0 0 0 var(--border-radius-md);
 }
