feat(instructions): support instructions with `signature=undefined` (not specified) (#155)

--- a/src/pages/InstructionsPage/components/InstructionTable/StackDisplay.module.css
+++ b/src/pages/InstructionsPage/components/InstructionTable/StackDisplay.module.css
@@ -39,6 +39,14 @@
   margin-bottom: var(--spacing-xs);
 }
 
+.stackNotSpecified {
+  display: block;
+  font-size: var(--font-size-xs);
+  color: var(--color-text-tertiary);
+  opacity: 0.8;
+  margin-top: 0.2rem;
+}
+
 .conditionalBlockVertical {
   display: flex;
   flex-direction: column;
